<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.CreateMediaList">

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo_home_foreground" />

        <TextView
            android:id="@+id/page_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Homescreen"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Search"
            android:textSize="18dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/light_gray"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:layout_below="@id/linearTop">

        <LinearLayout
            android:id="@+id/linearMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_media_list_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:text="Listname:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/create_media_list_name_fld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Awesome Media"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/create_media_list_description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearMid"
            android:hint="Description" />

        <Button
            android:id="@+id/create_media_list_create_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_media_list_description_txt"
            android:text="Create List" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homeScreenButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_shape"
                android:scaleType="fitXY"
                android:src="@drawable/app_logo_home_foreground" />

            <ImageButton
                android:id="@+id/listAddButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/listViewButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@android:drawable/ic_dialog_dialer" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>