<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_media_list_number_item_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="List *Number*" />

    <TextView
        android:id="@+id/show_media_list_number_item_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Created By:" />

    <TextView
        android:id="@+id/show_media_list_number_item_favorite_count_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Favorite Count:" />

    <TextView
        android:id="@+id/show_media_list_number_item_description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="*Description*" />

    <Button
        android:id="@+id/deleteListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete list"/>
</LinearLayout>