<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/show_media_list_item_img"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerInside"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homescreen_item_txt"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="10dp"
            android:text="Title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_media_list_item_vote_average_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rating"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/show_media_list_item_popularity_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Popularity"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>