<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_media_list_details_position_and_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="List *ADAPTERPOSITION* - Created By *NAME*" />

    <LinearLayout
        android:id="@+id/linearSpinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/show_media_list_details_position_and_name_txt"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/list_genre_spn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_media_list_details_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@+id/linearSpinner"
        android:layout_marginHorizontal="5dp"/>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homeScreenButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_shape"
                android:scaleType="fitXY"
                android:src="@drawable/app_logo_home_foreground" />

            <ImageButton
                android:id="@+id/listAddButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/listViewButton"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/light_gray"
                app:srcCompat="@android:drawable/ic_dialog_dialer" />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="95dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_share" />

</RelativeLayout>